Fix menu alignment

--- a/content/css/_generic.scss
+++ b/content/css/_generic.scss
@@ -109,7 +109,7 @@
 .generic-menu {
   font-size: 1.1rem;
   font-variant-numeric: tabular-nums;
-  margin-left: $body-margin-half * -1;
+  // margin-left: $body-margin-half * -1;
   li {
     letter-spacing: -0.5px;
     white-space: nowrap;
